--- a/README
+++ b/README
@@ -1,8 +1,8 @@
-usage: partwriter.py [-h] [-v] [--tritone TRITONE] [--threshold THRESHOLD]
-                     [--largeleaps LARGELEAPS] [--crossover CROSSOVER]
-                     [--octaveorless OCTAVEORLESS] [--leadingtone LEADINGTONE]
-                     [--parallel PARALLEL] [--smoothness SMOOTHNESS]
-                     [--doubling DOUBLING]
+usage: partwriter.py [-h] [-v] [--tritone TRITONE] [--smoothness SMOOTHNESS]
+                     [--parallel PARALLEL] [--threshold THRESHOLD]
+                     [--doubling DOUBLING] [--leadingtone LEADINGTONE]
+                     [--largeleaps LARGELEAPS] [--octaveorless OCTAVEORLESS]
+                     [--crossover CROSSOVER]
                      inputfile
 
 Automated part writing for four-part harmony.
@@ -48,7 +48,8 @@ You may specify how to weight infractions of the rules using 'badness' factors
 (like in TeX) through command line arguments. The only exception is the
 calculation of the badness value for smoothness. You can specify a
 python-style lambda on the command line that will be used to calculate the
-badness value. The lambda should take one argument and return an integer.
+badness value. The lambda should take one argument and return an integer. Once
+the badness value of a solution crosses the threshold it is discarded.
 
 This program has a simple progress indicator to let you know that it is working.
 Depending on the number of blanks given as input, the execution time will vary.
@@ -64,21 +65,21 @@ positional arguments:
 optional arguments:
   -h, --help            show this help message and exit
   -v, --verbose
-  --tritone TRITONE     badness value for tritone(default: '10000000')
-  --threshold THRESHOLD
-                        badness value for threshold(default: '2500000')
-  --largeleaps LARGELEAPS
-                        badness value for largeleaps(default: '5000000')
-  --crossover CROSSOVER
-                        badness value for crossover(default: '10000000')
-  --octaveorless OCTAVEORLESS
-                        badness value for octaveorless(default: '5000000')
-  --leadingtone LEADINGTONE
-                        badness value for leadingtone(default: '10000000')
-  --parallel PARALLEL   badness value for parallel(default: '10000000')
+  --tritone TRITONE     badness value for tritone (default: '10000000')
   --smoothness SMOOTHNESS
-                        badness function (as python lambda) for
-                        smoothness(default: 'lambda a: pow(2,a)')
-  --doubling DOUBLING   badness value for doubling(default: '2500000')
+                        badness function (as python lambda) for smoothness
+                        (default: 'lambda a: pow(2,a)')
+  --parallel PARALLEL   badness value for parallel (default: '10000000')
+  --threshold THRESHOLD
+                        badness value for threshold (default: '2500000')
+  --doubling DOUBLING   badness value for doubling (default: '2500000')
+  --leadingtone LEADINGTONE
+                        badness value for leadingtone (default: '10000000')
+  --largeleaps LARGELEAPS
+                        badness value for largeleaps (default: '5000000')
+  --octaveorless OCTAVEORLESS
+                        badness value for octaveorless (default: '5000000')
+  --crossover CROSSOVER
+                        badness value for crossover (default: '10000000')
 
 Copyright (c) 2015 Souvik Banerjee. Released under GNU AGPLv3
